# python-project-52

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  makefile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  linter check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: admin.py  mixins.py  settings.py  test.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  user.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_connection_task_labels.py
task_manager/templates/: base.html  form.html  index.html  navbar.html
task_manager/templates/labels/: delete.html  labels.html
task_manager/templates/statuses/: delete.html  statuses.html
task_manager/templates/tasks/: delete.html  task.html  tasks.html
task_manager/templates/users/: users.html
task_manager/users/: models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_first_name_and_more.py
task_manager/users/tests/: test_crud.py
task_manager/users/tests/fixtures/: user.json
templates/: base.html  index.html
