[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["u-shev <sheveleva.jul@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
django = "^4.2.4"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
flake8 = "^6.1.0"
django-filter = "^23.3"
whitenoise = "^6.5.0"
rollbar = "^0.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
